--- a/templates/base.html
+++ b/templates/base.html
@@ -44,9 +44,9 @@
 					<div class="narrower-container">
 						<ul id="nav-list">
 							<li><a href="#about">About Us</a></li>
-							<li><a href="#exec">Execs</a></li>
+							<li><a href="#exec">E-Board</a></li>
+							<li><a href="#events">Events</a></li>
 							<li><a href="#photos">Photos</a></li>
-							<li><a href="#calendar">Calendar</a></li>
 							<li><a href="#contact">Contact</a></li>
 						</ul>
 					</div>
@@ -58,8 +58,8 @@
 				{% block carousel %}{% endblock %}
 				{% block about %}{% endblock %}
 				{% block exec %}{% endblock %}
+				{% block events %}{% endblock %}
 				{% block photo %}{% endblock %}
-				{% block calendar %}{% endblock %}
 				{% block contact %}{% endblock %}
 			</div>
 			<div id="footer">
