--- a/templates/exec.html
+++ b/templates/exec.html
@@ -3,7 +3,7 @@
 	<div class="section-container">
 		<div class="narrower-container">
 			<div class="section-title">
-		    	<h1> Exec Members </h1>
+		    	<h1> Exec Board </h1>
 		    </div>
 		    <!-- Nav tabs -->
 		    <div class="section-content">
