added bbq event

--- a/templates/events.html
+++ b/templates/events.html
@@ -7,6 +7,18 @@
 			</div>
 			<div class="section-content">
 				<table class="events-table" id="event-page-1">
+					<tr>
+						<td class="event-image">
+							<img src="{{ STATIC_URL }}images/events/bbq.jpg" >
+		    			</td>
+		    			<td class="event-desc">
+		    				<h2><strong>Korean Barbeque</strong></h2>
+		    				<h4>October 4, 2014, 2 PM at the central grills</h4>
+		    				<p>
+		    					Duke Korean Undergraduate Student Association presents Korean BBQ! Join us on October 4th at 2:00 PM at the central grills (in the gazebo behind the soccer field) to enjoy some delicious Korean meats, grilled by your KUSA Exec board! The menu so far consists of samgyupsal (pork belly), LA galbi (marinated beef short ribs), and kimchi. There will be plenty of food and this event is **OPEN TO ALL**, so come out and bring your friends! We will also be announcing the freshman representatives for the rest of the school year, so show your support!
+		    				</p>
+		    			</td>
+					</tr>
 		    		<tr>
 		    			<td class="event-image">
 							<img src="{{ STATIC_URL }}images/events/bowling.jpg" >
@@ -23,6 +35,8 @@
 		    				</p>
 		    			</td>
 		    		</tr>
+		    	</table>
+		    	<table class="events-table" id="event-page-2" style="display:none">
 		    		<tr>
 		    			<td class="event-image">
 							<img src="{{ STATIC_URL }}images/events/chuseok.jpg" >
@@ -37,8 +51,6 @@
 		    				</p>
 		    			</td>
 		    		</tr>
-		    	</table>
-		    	<table class="events-table" id="event-page-2" style="display:none">
 		    		<tr>
 		    			<td class="event-image">
 							<img src="{{ STATIC_URL }}images/events/kickoff.jpg" >
