uploaded BBQ photos

--- a/templates/photos.html
+++ b/templates/photos.html
@@ -10,6 +10,14 @@
 		    	<table class="photo-table" id="photo-page-1">
 		    		<tr>
 		    			<td>
+		    				<a class="fancybox" rel="group" href="#bbq-2014">
+		    					<div class="title-img">
+		    						<img src="{{ STATIC_URL }}images/bbq.jpg" >
+		    					</div>
+		    					<h4>Korean BBQ - 2014</h4>
+		    				</a>
+		    			</td>
+		    			<td>
 		    				<a class="fancybox" rel="group" href="#bowling-2014">
 		    					<div class="title-img">
 		    						<img src="{{ STATIC_URL }}images/bowling.jpg" >
@@ -33,6 +41,8 @@
 		    					<h4>KUSA Kickoff 2014</h4>
 		    				</a>
 		    			</td>
+		    		</tr>
+		    		<tr>
 		    			<td>
 		    				<a class="fancybox" rel="group" href="#Career">
 						    	<div class="title-img">
@@ -41,9 +51,6 @@
 					    		<h4>KSEA GBM/Career Night</h4>
 						    </a>						    
 		    			</td>
-		    		</tr>
-		    		<tr>
-		    			
 		    			<td>
 		    				<a class="fancybox" rel="group" href="#horse">
 						    	<div class="title-img">
@@ -113,8 +120,28 @@
 
 
 		<div style="display:none">
-			<div id="bowling-2014">
+			<div id="bbq-2014">
 				<div class="gallery" id="gallery1">
+					<img src="https://scontent-a-iad.xx.fbcdn.net/hphotos-xfa1/v/t1.0-9/10690015_702600793157115_655295737938575442_n.jpg?oh=285d50506d12a4c2b52c908dfe0f35d6&oe=54B67534" >
+					<img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xfa1/v/t1.0-9/10367719_702600659823795_5123770756703830591_n.jpg?oh=71862e266e063f4b80f4f053a889172f&oe=54BA88F7&__gda__=1421301441_49b5f89adc67a54c6f97f9ed99572627" >
+					<img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/10659354_702600689823792_8569784902967816354_n.jpg?oh=19cf7afe7d71029cdac329aba729caaf&oe=54C84894&__gda__=1422429000_d7ddf8b5f1377f0e930f6f6222cca75b" >
+					<img src="https://scontent-a-iad.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/10600495_702600499823811_1533255587135639552_n.jpg?oh=063ea302a6e73fbb92b53df20081d1f8&oe=54B11555" >
+					<img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xfa1/v/t1.0-9/10710810_702600766490451_2285851311388634212_n.jpg?oh=19c1ca57fdbabcef0f109fdb3791f43c&oe=54B57524&__gda__=1422547218_ce653f64912a244e01ae9eb5d0ec611c" >
+					<img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/10610578_702600953157099_3826086900185501252_n.jpg?oh=5a86c466eb6eb1def62fab901d2d52bb&oe=54B24B4A&__gda__=1422826491_f675c4a4d968edf768d727d16410ce9f" >
+					<img src="https://scontent-a-iad.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/10659336_702601009823760_7495035725069942872_n.jpg?oh=f45d5e7b80f7f0f0d4997b9082fca33f&oe=54AC52E1" >
+					<img src="https://scontent-a-iad.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/10460229_702600983157096_1126815804782678287_n.jpg?oh=8e443d7600c7983579d02232f1a7d288&oe=54C91C00" >
+					<img src="https://scontent-a-iad.xx.fbcdn.net/hphotos-xap1/v/l/t1.0-9/10151435_702601123157082_341606661255212381_n.jpg?oh=0a9204195d01578f8667f8c1fafc28ee&oe=54CE0959" >
+					<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/10612763_702601186490409_7664951439556606219_n.jpg?oh=e8518af79d39d159e066885c043c05f2&oe=54ACCBE7&__gda__=1421204319_808a538c1d84363c9a41eb0fa707e3a2" >
+					<img src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/1236614_702601209823740_1341146045557072544_n.jpg?oh=c7dea47e2fd1d1a1daf6887e7a11c6e6&oe=54AA771E&__gda__=1421692963_bb6bd9fcf44d2f17cf1a1af9b0384a26" >
+					<img src="https://scontent-a-iad.xx.fbcdn.net/hphotos-xaf1/v/l/t1.0-9/10704099_702601229823738_7484432568788528573_n.jpg?oh=92089e0692df4f23196768915d362252&oe=54AFB6AA" >
+					<img src="https://scontent-a-iad.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/10670058_702601296490398_7498694536967512531_n.jpg?oh=44169b9ae1afffd059497c040806d0a9&oe=54AD552E" >
+					<img src="https://scontent-a-iad.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/1545615_702600656490462_3972461157129104190_n.jpg?oh=567c3807045628413bad2eb359c59664&oe=54BA916A" >
+				</div>
+			</div>
+		</div>
+		<div style="display:none">
+			<div id="bowling-2014">
+				<div class="gallery" id="gallery2">
 					<img src="https://scontent-b-iad.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/10385404_698465513570643_8301184195025772577_n.jpg?oh=47ad5f7ea0164f4da899c5c9f189808f&oe=54872F37" >
 					<img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/10306389_698465516903976_5898471932326019719_n.jpg?oh=f5e5313c62102be54a58a7d89bb1cbd3&oe=54C110A8&__gda__=1417880692_c544d7aab1d3281ba440b49071237bf8" >
 					<img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xfp1/v/t1.0-9/1969275_698465510237310_6257002879426112090_n.jpg?oh=c3bae6917dd6857330190a7d045a5d91&oe=54C9E982&__gda__=1422176793_2a548f52ea671cad4803e0ad9147d688" >
@@ -132,7 +159,7 @@
 		</div>
 		<div style="display:none">
 			<div id="chuseok-2014">
-				<div class="gallery" id="gallery2">
+				<div class="gallery" id="gallery3">
 					<img src="https://scontent-b-iad.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/997061_693988170685044_8324053042147533838_n.jpg?oh=988bfe4840fa397a42e0a3ab9c2465dd&oe=54C652B3">
 					<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xfa1/v/t1.0-9/10383483_693988174018377_7276721224336100936_n.jpg?oh=ea4cddd3fe238724fbf3e48cd0f520fd&oe=548702B7&__gda__=1422963841_d745b707ff0888110129e5eaf8dd0aa8">
 					<img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/10557343_693988264018368_4686172903175575509_n.jpg?oh=1c6ff741d516e9977825614a7dee23a3&oe=5482BD23&__gda__=1418683282_720f4838e3a8bdfb488393e78f511a52" >
@@ -151,7 +178,7 @@
 		</div>
 		<div style="display:none">
 			<div id="kickoff-2014">
-				<div class="gallery" id="gallery3">
+				<div class="gallery" id="gallery4">
 				<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/10645330_10153156614114488_1695784841970772361_n.jpg?oh=8229ba2490ee2ec332d8680a4be4b127&oe=548A0CA3&__gda__=1422536373_6ba5401dc060595ba4bab408985df43f">
 				<img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xpa1/v/t34.0-12/10668487_10204903204727905_1042631016_n.jpg?oh=c64c40cc1b47e876c3421abe1e76780c&oe=5427D527&__gda__=1411828682_1d5f7cb54e86056005b16d2bc72997b4">
 				<img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xpf1/v/t34.0-12/10695089_10204903204887909_1985631302_n.jpg?oh=b2ffc6fdcad3fea7260c529868b5fd25&oe=5427D081&__gda__=1411844112_f903badfbed1fa702731d9e60f8bb44a">
@@ -160,7 +187,7 @@
 		</div>
 		<div style="display:none">
 			<div id="Career">
-				<div class="gallery" id="gallery4">
+				<div class="gallery" id="gallery5">
 					<img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xap1/t1.0-9/1509830_608903779193484_723407919_n.jpg">
 					<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xpf1/t1.0-9/10150614_608903772526818_1728878078_n.jpg">
 					<img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xfp1/v/t1.0-9/10150658_608903929193469_311390140_n.jpg?oh=726ac99d4363e378b006b11068446db0&oe=54669928&__gda__=1416154503_abe29ca8a718e33d5dc658384fe5ddda">
@@ -175,7 +202,7 @@
 		</div>
 		<div style="display:none">
 			<div id="horse">
-				<div class="gallery" id="gallery5">
+				<div class="gallery" id="gallery6">
 					<img src="https://scontent-b-sea.xx.fbcdn.net/hphotos-xpf1/t1.0-9/1800339_588263244590871_1471171126_n.jpg">
 					<img src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xpf1/t1.0-9/1911788_588263271257535_1532979236_n.jpg">
 					<img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xpa1/t1.0-9/1798194_588263157924213_1617561193_n.jpg">
@@ -188,7 +215,7 @@
 		</div>
 		<div style="display:none">
 			<div id="SNL"> 
-				<div class="gallery" id="gallery6">				
+				<div class="gallery" id="gallery7">				
 					<img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xfp1/v/t1.0-9/1456695_542649682485561_1759024476_n.jpg?oh=d90ae768abd4fd2ed2ff782225640887&oe=546B11EA&__gda__=1416513349_7bbad8df324d92543704e9105771b1ed">
 					<img src="https://scontent-b-sea.xx.fbcdn.net/hphotos-xfp1/t1.0-9/1468794_542649599152236_648908827_n.jpg">
 					<img src="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-xap1/t1.0-9/1470315_542649772485552_1378419564_n.jpg">
@@ -208,7 +235,7 @@
 		</div>
 		<div style="display:none">
 			<div id="BBQ">
-				<div class="gallery" id="gallery7">
+				<div class="gallery" id="gallery8">
 					<img src="https://scontent-a-sea.xx.fbcdn.net/hphotos-xap1/t1.0-9/1239661_516208171796379_850692583_n.jpg">
 					<img src="https://scontent-b-sea.xx.fbcdn.net/hphotos-frc3/t1.0-9/1233493_516208175129712_1593840193_n.jpg">
 					<img src="https://scontent-a-sea.xx.fbcdn.net/hphotos-xpa1/t1.0-9/563585_516208168463046_1545374843_n.jpg">
