fixed kickoff photos

--- a/templates/photos.html
+++ b/templates/photos.html
@@ -179,9 +179,9 @@
 		<div style="display:none">
 			<div id="kickoff-2014">
 				<div class="gallery" id="gallery4">
-				<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/10645330_10153156614114488_1695784841970772361_n.jpg?oh=8229ba2490ee2ec332d8680a4be4b127&oe=548A0CA3&__gda__=1422536373_6ba5401dc060595ba4bab408985df43f">
-				<img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xpa1/v/t34.0-12/10668487_10204903204727905_1042631016_n.jpg?oh=c64c40cc1b47e876c3421abe1e76780c&oe=5427D527&__gda__=1411828682_1d5f7cb54e86056005b16d2bc72997b4">
-				<img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xpf1/v/t34.0-12/10695089_10204903204887909_1985631302_n.jpg?oh=b2ffc6fdcad3fea7260c529868b5fd25&oe=5427D081&__gda__=1411844112_f903badfbed1fa702731d9e60f8bb44a">
+					<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/10645330_10153156614114488_1695784841970772361_n.jpg?oh=8229ba2490ee2ec332d8680a4be4b127&oe=548A0CA3&__gda__=1422536373_6ba5401dc060595ba4bab408985df43f">
+					<img src="{{ STATIC_URL }}images/kickoff_2.jpg">
+					<img src="{{ STATIC_URL }}images/kickoff_3.jpg">
 				</div>
 			</div>
 		</div>
