--- a/templates/events.html
+++ b/templates/events.html
@@ -9,13 +9,44 @@
 				<table class="events-table" id="event-page-1">
 					<tr>
 						<td class="event-image">
+							<img src="{{ STATIC_URL }}images/events/jubilee.jpg" >
+		    			</td>
+		    			<td class="event-desc">
+		    				<h2><strong>Save My Seoul - Jubilee Project</strong></h2>
+		    				<h4>November 8, 2014, 7 PM at White Lecture Hall</h4>
+		    				<p>
+		    					Duke Korean Undergraduate Student Association is excited to welcome <a target="_blank" href="https://www.facebook.com/JubileeProject">Jubilee Project</a> for an exclusive advance screening of their newest film, "Save My Seoul"! "Save My Seoul" is a documentary that uncovers the realities of rampant prostitution and sex trafficking in Seoul, South Korea. The film is intended to raise awareness of the issue to others outside of Korea and ultimately spur action to end sex trafficking through a worldwide youth movement. To learn more, visit <a target="_blank" href="http://www.savemyseoul.com/">http://www.savemyseoul.com/</a>.
+		    				</p>
+		    			</td>
+					</tr>
+		    		<tr>
+		    			<td class="event-image">
+							<img src="{{ STATIC_URL }}images/events/ironchef.png" >
+		    			</td>
+		    			<td class="event-desc">
+		    				<h2><strong>Iron Chef</strong></h2>
+		    				<h4>November 1, 2014, 4:30PM at Keohane Atrium</h4>
+		    				<p>
+		    					For the first time ever, TASA is hosting our annual Iron Chef Competition with KUSA! Once you sign up, we will assign you into teams. Each team will disperse into a designated kitchen with all the ingredients and cooking ware provided by us to make a specialty dish. No recipes or laptops are allowed! The dishes will be judged based on their presentation, taste, and originality.<br><br>
+
+		    					SIGN-UP <a target="_blank" href="https://docs.google.com/forms/d/1wByP25GfUZguFhn0UMG0iO5xNgc5GABRHjy1rmFdDTI/viewform"> HERE!</a>
+
+		    				</p>
+		    			</td>
+		    		</tr>
+		    	</table>
+				<table class="events-table" id="event-page-2" style="display:none">
+					<tr>
+						<td class="event-image">
 							<img src="{{ STATIC_URL }}images/events/bbq.jpg" >
 		    			</td>
 		    			<td class="event-desc">
 		    				<h2><strong>Korean Barbeque</strong></h2>
 		    				<h4>October 4, 2014, 2 PM at the central grills</h4>
 		    				<p>
-		    					Duke Korean Undergraduate Student Association presents Korean BBQ! Join us on October 4th at 2:00 PM at the central grills (in the gazebo behind the soccer field) to enjoy some delicious Korean meats, grilled by your KUSA Exec board! The menu so far consists of samgyupsal (pork belly), LA galbi (marinated beef short ribs), and kimchi. There will be plenty of food and this event is **OPEN TO ALL**, so come out and bring your friends! We will also be announcing the freshman representatives for the rest of the school year, so show your support!
+		    					Duke Korean Undergraduate Student Association presents Korean BBQ! Join us on October 4th at 2:00 PM at the central grills to enjoy some delicious Korean meats, grilled by your KUSA Exec board! The menu so far consists of samgyupsal (pork belly), LA galbi (marinated beef short ribs), and kimchi. <br><br>
+
+		    					There will be plenty of food and this event is **OPEN TO ALL**, so come out and bring your friends! 
 		    				</p>
 		    			</td>
 					</tr>
@@ -36,7 +67,7 @@
 		    			</td>
 		    		</tr>
 		    	</table>
-		    	<table class="events-table" id="event-page-2" style="display:none">
+		    	<table class="events-table" id="event-page-3" style="display:none">
 		    		<tr>
 		    			<td class="event-image">
 							<img src="{{ STATIC_URL }}images/events/chuseok.jpg" >
@@ -73,6 +104,7 @@
 				  	<!-- <li class="disabled" id="prev-photo-page">  <a href="#">&laquo;</a> </li> -->
 				  	<li class="active" id="event-page-1"> 	 	<a href="#">1 </a>		</li>
 				  	<li id="event-page-2">					 	<a href="#">2 </a>		</li>
+				  	<li id="event-page-3">					 	<a href="#">3 </a>		</li>
 					<!-- <li id="next-photo-page">					<a href="#">&raquo;</a> </li> -->
 				</ul>
 			</div>
